--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,10 @@
 name: test
 
-on: [pull_request]
+env:
+  DOCKER_USER: ${{ secrets.DockerHubUser }}
+
+on:
+  - pull_request
 
 jobs:
   test:
@@ -8,12 +12,35 @@ jobs:
 
     steps:
       - name: checkout
-        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579  # v2.4.0
+        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
         with:
           fetch-depth: 1
 
-      - name: build image
-        run: docker build -t doks-debug .
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+
+      - name: Log into container registry
+        run: echo "${{ secrets.DockerHubToken }}" | docker login --username ${{ env.DOCKER_USER }} --password-stdin
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          platforms: |
+            linux/amd64
+            linux/arm64
+          tags: |
+            ${{ env.DOCKER_USER }}/doks-debug:smoke-test
 
       - name: smoke test
-        run: docker run --rm doks-debug sleep 1
+        run: docker run --rm ${{ env.DOCKER_USER }}/doks-debug:smoke-test sleep 1
